refacotors and some improvements